@@ -8,6 +8,8 @@ in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
 * [2019-] added data structure TMCG_Bigint
+* [2019-07-11] RFC4880: added member 'expired' to TMCG_OpenPGP_Signature, 
+               TMCG_OpenPGP_Subkey, and TMCG_OpenPGP_Pubkey
 * [2019-07-10] RFC4880: changed length encoding for strings and subpackets
 * [2019-07-08] RFC4880: changed ArmorEncode() to avoid armor header by default
    see https://mailarchive.ietf.org/arch/msg/openpgp/WynQyL-9vfVFLe2Jau3jxpT83g8
